[gd_scene load_steps=30 format=3 uid="uid://bb8yx0g2hcv3j"]

[ext_resource type="Script" uid="uid://goxlrk6yfaa" path="res://scripts/CombatScene.gd" id="1_ik0t7"]
[ext_resource type="Script" uid="uid://m8mkcnwk0wu6" path="res://scripts/player_1.gd" id="2_0vylu"]
[ext_resource type="Texture2D" uid="uid://cimsc3imj0bht" path="res://assets/underworld background.jpg" id="2_6sw3s"]
[ext_resource type="Script" uid="uid://bouq4rkumalne" path="res://scripts/player_2.gd" id="4_6ovae"]
[ext_resource type="Texture2D" uid="uid://dsfvknr2lqhos" path="res://assets/PERCY.png" id="4_g0m11"]
[ext_resource type="Texture2D" uid="uid://buuq6wbpxlkfg" path="res://assets/UI Health Bar.png" id="5_5qq3q"]
[ext_resource type="Script" uid="uid://bb2115idlmkyp" path="res://scripts/enemy_1.gd" id="5_ivkwx"]
[ext_resource type="Texture2D" uid="uid://c0ltxyukg0hah" path="res://assets/ANABETHH.png" id="6_5qq3q"]
[ext_resource type="Script" uid="uid://b4lvsgc72jmpy" path="res://scripts/enemy_2.gd" id="6_6sw3s"]
[ext_resource type="Texture2D" uid="uid://cka7xexn7bf51" path="res://assets/UI Health Bar tint.png" id="6_g5ebj"]
[ext_resource type="Script" uid="uid://dber1owkvg6cg" path="res://scripts/ui.gd" id="7_g0m11"]
[ext_resource type="Script" uid="uid://gxerhqf8ei5m" path="res://scripts/target_selector.gd" id="8_2edba"]
[ext_resource type="Texture2D" uid="uid://c121cgapn718r" path="res://assets/Minotaur.png" id="8_g0m11"]
[ext_resource type="Texture2D" uid="uid://l2wdomphjhgi" path="res://assets/Nightborne.png" id="10_5qq3q"]
[ext_resource type="Texture2D" uid="uid://b6fy6wt1k3ib8" path="res://assets/arrow.png" id="15_ohwxf"]

[sub_resource type="Animation" id="Animation_g0m11"]
resource_name = "Hit"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(40, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5qq3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_g5ebj"]
resource_name = "Heal"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ohwxf"]
_data = {
&"Heal": SubResource("Animation_g5ebj"),
&"Hit": SubResource("Animation_g0m11"),
&"RESET": SubResource("Animation_5qq3q")
}

[sub_resource type="Animation" id="Animation_ohwxf"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(80, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_blj0x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6r8bj"]
resource_name = "Heal"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, -10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_da1ml"]
_data = {
&"Heal": SubResource("Animation_6r8bj"),
&"Hit": SubResource("Animation_ohwxf"),
&"RESET": SubResource("Animation_blj0x")
}

[sub_resource type="Animation" id="Animation_da1ml"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-40, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lef5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aepks"]
_data = {
&"Hit": SubResource("Animation_da1ml"),
&"RESET": SubResource("Animation_lef5q")
}

[sub_resource type="Animation" id="Animation_ff51q"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-80, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gcf8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dobui"]
_data = {
&"Hit": SubResource("Animation_ff51q"),
&"RESET": SubResource("Animation_gcf8m")
}

[node name="CombatScene" type="Node2D"]
script = ExtResource("1_ik0t7")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(191, 109)
scale = Vector2(0.300199, 0.340625)
texture = ExtResource("2_6sw3s")

[node name="Percy" type="Node2D" parent="."]
position = Vector2(101, 142)
script = ExtResource("2_0vylu")

[node name="name" type="Label" parent="Percy"]
offset_left = -17.0
offset_top = -45.0
offset_right = 26.0
offset_bottom = -22.0
theme_override_font_sizes/font_size = 8
text = "Percy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Percy"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_g0m11")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Percy"]
libraries = {
&"": SubResource("AnimationLibrary_ohwxf")
}

[node name="healthbar" type="TextureProgressBar" parent="Percy"]
offset_left = -22.0
offset_top = -27.0
offset_right = 30.0
offset_bottom = -18.0
value = 100.0
texture_over = ExtResource("5_5qq3q")
texture_progress = ExtResource("6_g5ebj")
tint_progress = Color(0.729412, 0, 0, 1)

[node name="hplabel" type="Label" parent="Percy"]
offset_left = -26.0
offset_top = -28.6
offset_right = 32.0
offset_bottom = -5.6
theme_override_font_sizes/font_size = 8
text = "100"
horizontal_alignment = 1

[node name="Annabeth" type="Node2D" parent="."]
position = Vector2(39, 142)
script = ExtResource("4_6ovae")

[node name="name2" type="Label" parent="Annabeth"]
offset_left = -17.0
offset_top = -44.0
offset_right = 26.0
offset_bottom = -21.0
theme_override_font_sizes/font_size = 8
text = "Annabeth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="healthbar2" type="TextureProgressBar" parent="Annabeth"]
offset_left = -22.0
offset_top = -27.0
offset_right = 30.0
offset_bottom = -18.0
value = 100.0
texture_over = ExtResource("5_5qq3q")
texture_progress = ExtResource("6_g5ebj")
tint_progress = Color(0.729412, 0, 0, 1)

[node name="hplabel2" type="Label" parent="Annabeth"]
offset_left = -26.0
offset_top = -28.6
offset_right = 32.0
offset_bottom = -5.6
theme_override_font_sizes/font_size = 8
text = "100"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Annabeth"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_5qq3q")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Annabeth"]
libraries = {
&"": SubResource("AnimationLibrary_da1ml")
}

[node name="Minotaur" type="Node2D" parent="." groups=["enemies"]]
position = Vector2(270, 134)
script = ExtResource("5_ivkwx")

[node name="name3" type="Label" parent="Minotaur"]
offset_left = -24.0
offset_top = -71.0
offset_right = 19.0
offset_bottom = -48.0
theme_override_font_sizes/font_size = 8
text = "Minotaur"
horizontal_alignment = 1
vertical_alignment = 1

[node name="healthbar3" type="TextureProgressBar" parent="Minotaur"]
offset_left = -29.0
offset_top = -54.0
offset_right = 23.0
offset_bottom = -45.0
value = 100.0
texture_over = ExtResource("5_5qq3q")
texture_progress = ExtResource("6_g5ebj")
tint_progress = Color(0.729412, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="Minotaur"]
modulate = Color(1, 0, 0, 1)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_g0m11")
flip_h = true

[node name="hplabel3" type="Label" parent="Minotaur"]
offset_left = -33.0
offset_top = -56.0
offset_right = 25.0
offset_bottom = -33.0
theme_override_font_sizes/font_size = 8
text = "100"
horizontal_alignment = 1

[node name="MinoAnim" type="AnimationPlayer" parent="Minotaur"]
libraries = {
&"": SubResource("AnimationLibrary_aepks")
}

[node name="Nightborne" type="Node2D" parent="." groups=["enemies"]]
position = Vector2(338, 121)
script = ExtResource("6_6sw3s")

[node name="name4" type="Label" parent="Nightborne"]
offset_left = -26.0
offset_top = -44.0
offset_right = 19.0
offset_bottom = -21.0
theme_override_font_sizes/font_size = 8
text = "Nightborne"
horizontal_alignment = 1
vertical_alignment = 1

[node name="healthbar4" type="TextureProgressBar" parent="Nightborne"]
offset_left = -30.0
offset_top = -26.0
offset_right = 22.0
offset_bottom = -17.0
value = 100.0
texture_over = ExtResource("5_5qq3q")
texture_progress = ExtResource("6_g5ebj")
tint_progress = Color(0.729412, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="Nightborne"]
modulate = Color(1, 0, 0, 1)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_5qq3q")
flip_h = true

[node name="hplabel4" type="Label" parent="Nightborne"]
offset_left = -33.0
offset_top = -28.0
offset_right = 25.0
offset_bottom = -5.0
theme_override_font_sizes/font_size = 8
text = "100"
horizontal_alignment = 1

[node name="NightAnim" type="AnimationPlayer" parent="Nightborne"]
libraries = {
&"": SubResource("AnimationLibrary_dobui")
}

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("7_g0m11")

[node name="ActionMenu" type="VBoxContainer" parent="UI"]
layout_mode = 1
offset_left = 39.0
offset_top = 21.0
offset_right = 110.0
offset_bottom = 192.0

[node name="Attack1" type="Button" parent="UI/ActionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Attack1"

[node name="Attack2" type="Button" parent="UI/ActionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Attack 2"

[node name="Heal" type="Button" parent="UI/ActionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Heal"

[node name="TargetSelector" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_left = 194.0
offset_top = 5.0
offset_right = 392.0
offset_bottom = 111.0
script = ExtResource("8_2edba")

[node name="ButtonsContainer" type="VBoxContainer" parent="UI/TargetSelector"]
layout_mode = 1
offset_right = 191.0
offset_bottom = 207.0

[node name="BattleLog" type="RichTextLabel" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 180.0
offset_right = 370.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
scroll_following = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(43, 96)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("15_ohwxf")
